<resources>
    <string name="app_name">StoryApp</string>
    <string name="pasword_hint">Input Password</string>
    <string name="email_hint">Fill Your Email</string>
    <string name="name_hint">Input Your Name</string>
    <string name="register">Register</string>
    <string name="camera">Open Camera</string>
    <string name="upload">Upload</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Logout">Logout</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t Have Account?</string>
    <string name="have_account">Already Have Account?</string>
    <string name="placeholder">placeholder</string>
    <string name="caption">Explain Your Story</string>
    <string name="gallery">Open Gallery</string>

    <string name="camera_fail">Camera Failing</string>
    <string name="change_lang">Change Language</string>
    <string name="switch_btn">Button to Flip Camera</string>
    <string name="capture_fail">Fail To Take Picture</string>
    <string name="capture_button">Button To Take Picture</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="welcome_user">Welcome,</string>
    <string name="btn_story">Post</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="image_hint">The Preview of Image</string>
    <string name="location_hint">Button to select Location</string>
</resources>