<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

    <TextView
            android:text="@string/login"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:background="@drawable/view_bg"

            />

    <LinearLayout

            android:layout_width="match_parent"
            android:paddingVertical="32dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintBottom_toTopOf="@id/text_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:orientation="vertical">

        <EditText
                android:background="@drawable/edt_background"
                android:id="@+id/ed_login_email"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:hint="@string/email_hint"
                android:layout_marginEnd="16dp"
                android:autofillHints="emailAddress" />


        <com.affan.storyapp.ui.MyEditText
                android:background="@drawable/edt_background"
                android:id="@+id/ed_login_password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:hint="@string/pasword_hint"
                android:inputType="textPassword"
                android:layout_marginEnd="16dp" />


        <Button
                android:id="@+id/btn_login"
                android:backgroundTint="@color/dodger_blue"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
    </LinearLayout>

    <TextView

            android:id="@+id/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="64dp"
            android:text="@string/no_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    <View
            android:id="@+id/dimmedBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#88000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>